--- a/virtualstack/public/index.html
+++ b/virtualstack/public/index.html
@@ -2,14 +2,41 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./favicon.ico" />
+    <link rel="icon" href="./stack-of-paper-outline.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <script
+      src="https://unpkg.com/react/umd/react.production.min.js"
+      crossorigin
+    ></script>
+    <script>
+      src = "https://unpkg.com/react-dom/umd/react-dom.production.min.js";
+      crossorigin;
+    </script>
+    <script>
+      src =
+        "https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js";
+      crossorigin;
+    </script>
+    <script>
+      var Alert = ReactBootstrap.Alert;
+    </script>
+    <!--
+      Links to server files
+    -->
+    <link
+      rel="prefetch"
+      href="/mnt/c/Users/david/Desktop/virtualstack/index.css"
+    />
+    <link
+      rel="prefetch"
+      href="/mnt/c/Users/david/Desktop/virtualstack/index.js"
+    />
+    <link rel="stack-logo" href="stack-of-paper-outline.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -40,4 +67,14 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <footer>
+    <div>
+      Icons made by
+      <a href="https://www.flaticon.com/authors/freepik" title="Freepik"
+        >Freepik</a
+      >
+      from
+      <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+    </div>
+  </footer>
 </html>
